<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_myStorageList"
            android:icon="@mipmap/ic_mail_white"
            android:title="@string/nav_main_myStorageList"/>
        <item android:id="@+id/nav_main_message"
            android:icon="@mipmap/ic_mail_white"
            android:title="@string/nav_main_message"/>
        <item android:id="@+id/nav_main_settings"
            android:icon="@mipmap/ic_mail_white"
            android:title="@string/nav_main_settings"/>
        <item android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_mail_white"
            android:title="@string/nav_logout"/>

    </group>

</menu>