<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/drawer_layout_vendorAppList">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vendorAppList"
            android:icon="@mipmap/ic_lock_white"
            android:title="@string/nav_vendor_application_list" />
        <item
            android:id="@+id/nav_vendorList"
            android:icon="@mipmap/ic_dots"
            android:title="@string/nav_vendor_list" />
        <item
            android:id="@+id/nav_vendorSettings"
            android:icon="@mipmap/ic_settings_white"
            android:title="@string/nav_vendor_settings" />

        <item
            android:id="@+id/nav_vendorBack"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/back_to_main" />


    </group>
</menu>